<resources>
    <string name="app_name">MyDribbo</string>

    <string name="title_home">Dribbbo</string>
    <string name="title_likes">Likes</string>
    <string name="title_buckets">Buckets</string>

    <string name="drawer_menu_home">Home</string>
    <string name="drawer_menu_likes">Favorite</string>
    <string name="drawer_menu_buckets">Buckets</string>

    <string name="login">Log in</string>
    <string name="logout">Log out</string>
    <string name="save">Save</string>
    <string name="share">Share</string>
    <string name="user_profile_picture">User profile picture</string>

    <string name="open_drawer">open drawer</string>
    <string name="close_drawer">close drawer</string>

    <string name="new_bucket_title">New bucket</string>
    <string name="new_bucket_create">Create</string>
    <string name="new_bucket_cancel">Cancel</string>
    <string name="new_bucket_name">Bucket Name</string>
    <string name="new_bucket_descripiton">Bucket description</string>

    <string name="shot_detail_loading_buckets">Loading buckets, just one second…</string>
    <string name="shot_image">Shot image</string>

    <string name="shot_count">{0,choice,0#0 shot|1#1 shot|1&lt;{0} shots}</string>
    <string name="auth_activity_title">Log into Dribbble</string>

    <string name="activity_login_btn_text"><u><b><i>Log into Dribbble</i></b></u></string>
    <string name="activity_login_icon">Dribbble icon</string>
    <string name="like">Like</string>
    <string name="bucket">Bucket</string>
    <string name="shot_author_picture">Shot author picture</string>
    <string name="shot_title">Shot title</string>
    <string name="share_shot">Share this amazing shot!</string>
    <string name="new_bucket_description">Bucket Description</string>
    <string name="choose_bucket">Choose Bucket</string>

    <string name="shot_count_single">%1$d shot</string>
    <string name="shot_count_plural">%1$d shots</string>
</resources>
