<?xml version="1.0" encoding="utf-8"?>
<com.github.mzule.fantasyslide.FantasyDrawerLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/toolbar"/>

        <FrameLayout
            android:id="@+id/fragment_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>


    <com.github.mzule.fantasyslide.SideBar
        android:id="@+id/drawer"
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/drawColor"
        android:gravity="center_vertical"
        app:maxTranslationX="66dp">

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingBottom="50dp"
            android:layout_marginRight="115dp">

            <com.example.jiangliu.mydribbo.widget.CircleImageView
                android:id="@+id/nav_header_user_picture"
                android:layout_width="82dp"
                android:layout_height="82dp"
                android:layout_marginBottom="@dimen/spacing_small"
                android:contentDescription="@string/user_profile_picture"
                android:src="@drawable/user_picture_placeholder"
                app:civ_border_color="@color/menu_text_color"
                app:civ_border_width="2dp"/>

            <TextView
                android:id="@+id/nav_header_user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="@color/menu_text_color"
                tools:text="Username"/>

        </LinearLayout>

        <TextView
            style="@style/MenuText"
            android:id="@+id/drawer_item_home"
            android:drawableLeft="@drawable/ic_home_black_18px"
            android:text="@string/drawer_menu_home" />

        <TextView
            style="@style/MenuText"
            android:id="@+id/drawer_item_likes"
            android:drawableLeft="@drawable/ic_favorite_black_18dp"
            android:text="@string/drawer_menu_likes" />

        <TextView
            style="@style/MenuText"
            android:id="@+id/drawer_item_buckets"
            android:drawableLeft="@drawable/ic_inbox_orange_50_18dp"
            android:text="@string/drawer_menu_buckets" />

        <TextView
            android:id="@+id/nav_header_logout"
            android:drawableLeft="@drawable/ic_settings_power_black_18dp"
            android:layout_marginTop="70dp"
            android:text="@string/logout"
            style="@style/MenuText_logout"/>

    </com.github.mzule.fantasyslide.SideBar>

</com.github.mzule.fantasyslide.FantasyDrawerLayout>
